<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev_sirox.com.br.calculoimc.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ImcTitle"
        android:textSize="28dp"
        android:gravity="center_horizontal"
        android:id="@+id/txtImcTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ImcDesc"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:id="@+id/txtImcDesc"
        android:layout_below="@+id/txtImcTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgPeso"
        android:layout_alignTop="@+id/edtPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_peso"
        android:layout_marginTop="5dp"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPeso"
        android:hint="Peso"
        android:inputType="numberDecimal"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/txtImcDesc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/imgPeso"
        android:layout_toEndOf="@+id/imgPeso"
        android:visibility="visible" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgAltura"
        android:layout_below="@+id/imgPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_altura"
        android:layout_marginTop="5dp"
        android:visibility="invisible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtAltura"
        android:layout_below="@+id/edtPeso"
        android:hint="Altura"
        android:visibility="invisible"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/imgAltura"
        android:layout_toEndOf="@+id/imgAltura" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgIdade"
        android:layout_below="@+id/imgAltura"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_idade"
        android:layout_marginTop="5dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Idade"
        android:layout_below="@+id/edtAltura"
        android:visibility="invisible"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/imgIdade"
        android:layout_toEndOf="@+id/imgIdade" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imgSexo"
        android:src="@mipmap/ic_sexo"
        android:layout_below="@+id/imgIdade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/rdButtonSexo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_below="@+id/edtIdade"
        android:layout_toRightOf="@+id/imgSexo"
        android:layout_toEndOf="@+id/imgSexo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImcRdButtonMasc"
            android:id="@+id/rdButtonMasc"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImcRdButtonFem"
            android:id="@+id/rdButtonFem"
            android:layout_marginLeft="5dp"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/ImcCalcular"
        android:id="@+id/btnCalcularImc"
        android:layout_below="@+id/rdButtonSexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:onClick="calcularImc" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ImcSobre"
        android:id="@+id/btnSobreImc"
        android:layout_below="@+id/rdButtonSexo"
        android:layout_toRightOf="@+id/btnCalcularImc"
        android:layout_toEndOf="@+id/btnCalcularImc"
        android:visibility="invisible"
        android:onClick="sobreImc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ImcResultado"
        android:id="@+id/txtImcResultadoTitle"
        android:layout_below="@+id/btnCalcularImc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ImcResultadoPadrao"
        android:id="@+id/txtImcResultado"
        android:layout_below="@+id/btnCalcularImc"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:visibility="invisible"
        android:layout_marginTop="-6dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtImcResultadoTitle"
        android:layout_toStartOf="@+id/btnSobreImc"
        android:layout_alignRight="@+id/btnSobreImc"
        android:layout_alignEnd="@+id/btnSobreImc"
        android:id="@+id/scvIMC"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearIMC">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ImcRsultadoDescritivo"
                android:id="@+id/txtRsultadoDescritivo"
                android:gravity="center"
                android:textSize="30dp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
